apps/base/bite/bite-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: ssl-redirect
spec:
  headers:
    sslRedirect: true
