apps/base/bite/bite-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bite
  # namespace: bite
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: bite
  template:
    metadata:
      name: bite
      labels:
        app: bite
    spec:
      containers:
        - name: bite
          image: ghcr.io/martijnjanssen/bite:12
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bite-frontend
  # namespace: bite
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: bite-frontend
  template:
    metadata:
      name: bite-frontend
      labels:
        app: bite-frontend
    spec:
      containers:
        - name: bite-frontend
          image: ghcr.io/martijnjanssen/bite-frontend:152
          imagePullPolicy: IfNotPresent
