apps/base/bite/bite-service-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bite-grpc
  # namespace: bite
  labels:
    app: bite
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
spec:
  type: LoadBalancer
  ports:
    - name: grpc
      port: 80
      protocol: TCP
      targetPort: 5051
  selector:
    app: bite
