apps/base/bite/bite-service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: bite-web
  # namespace: bite
  labels:
    app: bite
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 5081
  selector:
    app: bite
