apps/base/bite/bite-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: bite-grpc
spec:
  routes:
    - kind: Rule
      match: Host(`grpc.bite.martijnj.nl`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: bite-grpc
          port: 80
          scheme: h2c
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: bite-http
spec:
  routes:
    - kind: Rule
      match: Host(`http.bite.martijnj.nl`) && PathPrefix(`/`)
      middlewares:
        - name: ssl-redirect
      services:
        - kind: Service
          name: bite-http
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: bite-frontend
spec:
  routes:
    - kind: Rule
      match: (Host(`bite.martijnj.nl`) || Host(`www.bite.martijnj.nl`)) && PathPrefix(`/`)
      middlewares:
        - name: ssl-redirect
      services:
        - kind: Service
          name: bite-frontend
          port: 80
